<resources>
  <string name="app_name">Two Activities</string>
  <string name="button_send">Send</string>
  <string name="text_header">Message Received</string>
  <string name="message_edittext_hint">Enter your message</string>

  <string name="button_reply">Reply</string>
  <string name="reply_edittext_hint">Enter your reply</string>
  <string name="text_header_reply">Message Reply</string>
</resources>
